Fix spacing on login and sign up forms.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,6 +54,11 @@ section.sign-in-form {
   padding-left: 38px;
 }
 
+.sign-in-title {
+  margin-left: 0px;
+  text-align: center;
+}
+
 label {
   font-size: 15.5pt;
   text-align: left;
@@ -138,7 +143,7 @@ body.backg {
   background-color: #d37538;
   width: 32%;
   font-weight: bold;
-  margin-left: 27%;
+  margin-left: 30%;
   border: solid #d37538;
   font-weight: bolder;
   font-size: 13pt;
@@ -187,11 +192,7 @@ a.nav-a {
 
 navbar-brand {
   margin-bottom: 30px;
-}
-
-navbar-brand {}
-img {
-  width: 145px;
+  width: 150px;
 }
 
 button.btn.btn-default.btn-sm.dropdown-toggle {
